packaged/objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Name__c</fullName>
        <label>Custom Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refugee_Sponsorship__c</fullName>
        <label>Refugee Sponsorship</label>
        <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
        <relationshipName>Signatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received EOI from Co-Sponsor</fullName>
                </value>
                <value>
                    <fullName>Application received by RCAV</fullName>
                </value>
                <value>
                    <fullName>CG Signature</fullName>
                </value>
                <value>
                    <fullName>RCAV Signature</fullName>
                </value>
                <value>
                    <fullName>Submission to ROC-O</fullName>
                </value>
                <value>
                    <fullName>Receive G Number from ROC-O</fullName>
                </value>
                <value>
                    <fullName>Case sent to overseas VO</fullName>
                </value>
                <value>
                    <fullName>Sent from AOR from ROC-O</fullName>
                </value>
                <value>
                    <fullName>Interview Confirmation Received</fullName>
                </value>
                <value>
                    <fullName>Invocation to Interview received from VO</fullName>
                </value>
                <value>
                    <fullName>Confirmation of Attendance for Interview sent to VO</fullName>
                </value>
                <value>
                    <fullName>Medical approved</fullName>
                </value>
                <value>
                    <fullName>Visa approved</fullName>
                </value>
                <value>
                    <fullName>Application / Visa Approved by VO</fullName>
                </value>
                <value>
                    <fullName>Pre-NAT Received</fullName>
                </value>
                <value>
                    <fullName>NAT Received</fullName>
                </value>
                <value>
                    <fullName>Family Arrived</fullName>
                </value>
                <value>
                    <fullName>Quarterly Report Issued</fullName>
                </value>
                <value>
                    <fullName>Final Exit Interview Conducted</fullName>
                </value>
                <value>
                    <fullName>Rejection Letter Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Milestone-{00000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>